Fixed and error to package pet web clinic as a jar instead of a war.

--- a/pet-clinic-web/untitled/pom.xml
+++ b/pet-clinic-web/untitled/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>pet-clinic-web</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>pet-clinic-web Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
