--- a/pom.xml
+++ b/pom.xml
@@ -23,25 +23,15 @@
     </developers>
     <modules>
         <module>pet-clinic-data/pet-clinic-data</module>
-        <module>pet-clinic-web/untitled</module>
+        <module>pet-clinic-web/pet-clinic-web</module>
     </modules>
     <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
+        <developerConnection>scm:git:https://github.com/Brandon-Beach/sfg-pet-clinic.git</developerConnection>
     </scm>
     <properties>
         <java.version>17</java.version>
     </properties>
-    <dependencies>
-
-
-
-
-    </dependencies>
-
-    <build>
+   <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -58,9 +48,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.1.1</version>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
