--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>sfg-pet-clinic</name>
     <description>sfg-pet-clinic</description>
@@ -26,7 +26,7 @@
     </modules>
     <scm>
         <developerConnection>scm:git:https://github.com/Brandon-Beach/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
     <properties>
         <java.version>17</java.version>
